// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accounts should return filtered accounts along with their permissions 1`] = `
Object {
  "accounts": Object {
    "__typename": "AccountsConnection",
    "nodes": Array [
      Object {
        "__typename": "Account",
        "address": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "createdBlockId": "84",
        "datetime": "2022-11-08T19:00:58.501",
        "eventId": "DidCreated",
        "id": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "identity": Object {
          "__typename": "Identity",
          "did": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
          "primaryAccount": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
          "secondaryKeysFrozen": false,
        },
        "identityId": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "permissions": Object {
          "__typename": "Permission",
          "assets": null,
          "portfolios": null,
          "transactionGroups": Array [],
          "transactions": null,
        },
        "permissionsId": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
      },
      Object {
        "__typename": "Account",
        "address": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
        "createdBlockId": "92",
        "datetime": "2022-11-08T19:01:02.5",
        "eventId": "SecondaryKeysAdded",
        "id": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
        "identity": Object {
          "__typename": "Identity",
          "did": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
          "primaryAccount": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
          "secondaryKeysFrozen": false,
        },
        "identityId": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "permissions": Object {
          "__typename": "Permission",
          "assets": Object {
            "type": "these",
            "values": Array [],
          },
          "portfolios": Object {
            "type": "these",
            "values": Array [],
          },
          "transactionGroups": Array [],
          "transactions": Object {
            "type": "these",
            "values": Array [],
          },
        },
        "permissionsId": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
      },
    ],
  },
}
`;

exports[`accounts should return first 10 accounts as there are no filters 1`] = `
Object {
  "accounts": Object {
    "__typename": "AccountsConnection",
    "nodes": Array [
      Object {
        "__typename": "Account",
        "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "createdBlockId": "0",
        "datetime": "2022-11-08T19:00:17",
        "eventId": "DidCreated",
        "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "permissionsId": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      },
      Object {
        "__typename": "Account",
        "address": "5DoYuR47UzC4vCzkiJR2U8YBavrWqPMx2J98xChN1XRWMCyG",
        "createdBlockId": "0",
        "datetime": "2022-11-08T19:00:17",
        "eventId": "DidCreated",
        "identityId": "0x0400000000000000000000000000000000000000000000000000000000000000",
        "permissionsId": "5DoYuR47UzC4vCzkiJR2U8YBavrWqPMx2J98xChN1XRWMCyG",
      },
      Object {
        "__typename": "Account",
        "address": "5GjUzQyQQw76j7qnMjugqzSGirGx5bLNJa56EUqNwACeejVF",
        "createdBlockId": "0",
        "datetime": "2022-11-08T19:00:17",
        "eventId": "DidCreated",
        "identityId": "0x0200000000000000000000000000000000000000000000000000000000000000",
        "permissionsId": "5GjUzQyQQw76j7qnMjugqzSGirGx5bLNJa56EUqNwACeejVF",
      },
      Object {
        "__typename": "Account",
        "address": "5DCTBqxjusgxnSUAKJnSTpV4PH1ZfoPXsA9oezFGtRVcRKPh",
        "createdBlockId": "0",
        "datetime": "2022-11-08T19:00:17",
        "eventId": "DidCreated",
        "identityId": "0x0100000000000000000000000000000000000000000000000000000000000000",
        "permissionsId": "5DCTBqxjusgxnSUAKJnSTpV4PH1ZfoPXsA9oezFGtRVcRKPh",
      },
      Object {
        "__typename": "Account",
        "address": "5DoHrJbfXPtL7DCq5r9wJ394mDVQ56ZjrD1SKR3iQwrnGGDn",
        "createdBlockId": "0",
        "datetime": "2022-11-08T19:00:17",
        "eventId": "DidCreated",
        "identityId": "0x0300000000000000000000000000000000000000000000000000000000000000",
        "permissionsId": "5DoHrJbfXPtL7DCq5r9wJ394mDVQ56ZjrD1SKR3iQwrnGGDn",
      },
      Object {
        "__typename": "Account",
        "address": "5EZuKEmP5vYMqs2KadjyM5YJ4MjnMjJaBXHNCDtibkg7FyKb",
        "createdBlockId": "45",
        "datetime": "2022-11-08T19:00:39",
        "eventId": "DidCreated",
        "identityId": "0x18419537c9b814e2280d736b81f217008f7b3249c64615bb68fbb24e42c5813d",
        "permissionsId": "5EZuKEmP5vYMqs2KadjyM5YJ4MjnMjJaBXHNCDtibkg7FyKb",
      },
      Object {
        "__typename": "Account",
        "address": "5CrMp8ekpRUDBu1Ytyuqs22B6zXMpH7L2Drh5kALckYD34Ca",
        "createdBlockId": "44",
        "datetime": "2022-11-08T19:00:38.5",
        "eventId": "DidCreated",
        "identityId": "0x5f558e6ef3e91fc8235133b365124be53cdee3fc6daf0a24caca1887cb39f4bf",
        "permissionsId": "5CrMp8ekpRUDBu1Ytyuqs22B6zXMpH7L2Drh5kALckYD34Ca",
      },
      Object {
        "__typename": "Account",
        "address": "5HgbFhyJNDVxHcJfRzqCgbSwFeUuoPJPp4dQoLAXTgmyfM4B",
        "createdBlockId": "48",
        "datetime": "2022-11-08T19:00:40.5",
        "eventId": "DidCreated",
        "identityId": "0xb91bdb42aa29ef2e36b4eff09ba7808f7f67e0248a67b409cea30dbe03a16cfb",
        "permissionsId": "5HgbFhyJNDVxHcJfRzqCgbSwFeUuoPJPp4dQoLAXTgmyfM4B",
      },
      Object {
        "__typename": "Account",
        "address": "5DD4UtG72nw7SYdz4Tu58j5WBA2PgLU1nqTvQiWEHZgDzeKW",
        "createdBlockId": "54",
        "datetime": "2022-11-08T19:00:43.501",
        "eventId": "DidCreated",
        "identityId": "0x756961371a77e989b922f1573e60cdaa3e72e97c2f19adb36fbfb9986b89a083",
        "permissionsId": "5DD4UtG72nw7SYdz4Tu58j5WBA2PgLU1nqTvQiWEHZgDzeKW",
      },
      Object {
        "__typename": "Account",
        "address": "5EHKkqfn8gqeYQoj5KDBAWYaHJu7FuhVT9zvJV7ijV9Mqahi",
        "createdBlockId": "55",
        "datetime": "2022-11-08T19:00:44.001",
        "eventId": "DidCreated",
        "identityId": "0xca6021e7dc8ec1fa171b2fd24e7ad9d1d75e2a913128036b0b871234ec30b5dd",
        "permissionsId": "5EHKkqfn8gqeYQoj5KDBAWYaHJu7FuhVT9zvJV7ijV9Mqahi",
      },
    ],
    "totalCount": 48,
  },
}
`;

exports[`accounts should return just total count 1`] = `
Object {
  "accounts": Object {
    "__typename": "AccountsConnection",
    "totalCount": 48,
  },
}
`;

exports[`identities should return identity details along with accounts and their permissions 1`] = `
Object {
  "identities": Object {
    "__typename": "IdentitiesConnection",
    "nodes": Array [
      Object {
        "__typename": "Identity",
        "createdBlockId": "84",
        "datetime": "2022-11-08T19:00:58.501",
        "did": "0xa05d9333759c804fbab61d454f6317c1a8257c01c49c68e029a112f9123e9c0b",
        "eventId": "DidCreated",
        "primaryAccount": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
        "secondaryAccounts": Object {
          "__typename": "AccountsConnection",
          "nodes": Array [
            Object {
              "__typename": "Account",
              "address": "5CrPPidjxv1aaupnq8atgsVpXNUmnZaqfyzhPcBTmkXqqsSt",
              "createdBlockId": "84",
              "eventId": "DidCreated",
              "permissions": Object {
                "__typename": "Permission",
                "assets": null,
                "createdBlockId": "84",
                "datetime": "2022-11-08T19:00:58.501",
                "portfolios": null,
                "transactionGroups": Array [],
                "transactions": null,
                "updatedBlockId": "84",
              },
            },
            Object {
              "__typename": "Account",
              "address": "5HjjcrApAACEsaNj1pcddn46Hq82qjwdAtKZva4wHxHnpt9c",
              "createdBlockId": "92",
              "eventId": "SecondaryKeysAdded",
              "permissions": Object {
                "__typename": "Permission",
                "assets": Object {
                  "type": "these",
                  "values": Array [],
                },
                "createdBlockId": "92",
                "datetime": "2022-11-08T19:01:02.5",
                "portfolios": Object {
                  "type": "these",
                  "values": Array [],
                },
                "transactionGroups": Array [],
                "transactions": Object {
                  "type": "these",
                  "values": Array [],
                },
                "updatedBlockId": "92",
              },
            },
          ],
        },
        "secondaryKeysFrozen": false,
        "updatedBlockId": "84",
      },
    ],
  },
}
`;

exports[`permissions should return permissions for a given account address 1`] = `
Object {
  "permissions": Object {
    "__typename": "PermissionsConnection",
    "nodes": Array [
      Object {
        "__typename": "Permission",
        "assets": Object {
          "type": "these",
          "values": Array [],
        },
        "createdBlockId": "311",
        "datetime": "2022-11-08T19:02:53.001",
        "id": "5EYxLuFdbD99jn2BsZ3f1rMoa3raDB8TAnTLX3VMXhQoJyrv",
        "nodeId": "WyJwZXJtaXNzaW9ucyIsIjQwMTBhYjJmLWUwYjYtNDU5YS1hNjc1LTc4ZTEwOGZiNzM1NyJd",
        "portfolios": Object {
          "type": "these",
          "values": Array [],
        },
        "transactionGroups": Array [],
        "transactions": Object {
          "type": "these",
          "values": Array [],
        },
        "updatedBlockId": "311",
      },
    ],
  },
}
`;
